done abp mvc project

--- a/src/BookStore.Web/appsettings.json
+++ b/src/BookStore.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44396"
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=BookStoreDb;Username=postgres;Password=SCRAM-SHA-256$4096:3x+cEdiourG1wPiufeQJcg==$YMzv+csgguUiipZbOB7vh9HoBqzN7oE2dnDxJCyDrZw=:zH34BpJjw3g7BvjWmMS/LBVQbAxVW05LBAuXD24+2j8="
+    "Default": "Host=localhost;Port=5432;Database=BS_Db;Username=postgres;Password=123456a@"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "JbGXCav4lWIllxhS"
